# mlx-video-server

./: .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
.mise/tasks/logs/: err  out
.mise/tasks/service/: install  restart  start  status  stop  uninstall
mlx_video_server/: __init__.py  config.py  files.py  generation.py  help.py  jobs.py  main.py  schemas.py  worker.py
tests/: test_api.py
