[project]
name = "mlx-video-server"
version = "0.1.0"
description = "Single-purpose HTTP server for video generation via mlx-video (Apple Silicon / MLX). LTX-2 distilled, single-flight queue, sync + async endpoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LTX-2 distilled generation. Pinned to a known-good commit for reproducibility.
    "mlx-video @ git+https://github.com/Blaizzy/mlx-video.git@87db56a51758fefb748a359b90a5283bb8ba4837",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic>=2",
    "pillow",
]

[project.scripts]
mlx-video-server = "mlx_video_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_video_server"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
